<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edHouseName"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/house_name"
            android:text=""
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/guestCount"
            android:layout_margin="8dp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/guestCount"
            android:text=""
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edPricePerDay"
            android:layout_margin="8dp"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pricePerDay"
            android:text=""
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edHouseBio"
            android:layout_margin="8dp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bio"
            android:text=""
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

</LinearLayout>