<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/textColor"
            android:textColorHint="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:hint="@string/surname"
            android:inputType="text"
            android:textColor="@color/textColor"
            android:textColorHint="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:textColorHint="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:hint="@string/phone"
            android:inputType="text"
            android:textColor="@color/textColor"
            android:textColorHint="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edBirthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:hint="@string/birth_day"
            android:inputType="date"
            android:textColor="@color/textColor"
            android:textColorHint="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:hint="@string/bio"
            android:inputType="text"
            android:textColor="@color/textColor"
            android:textColorHint="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />


    </LinearLayout>

</ScrollView>