<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:text="@string/options"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/viewAskQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:orientation="vertical">

        <TextView
            android:text="@string/ask_question"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin"
            android:textSize="@dimen/middleText" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/viewLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:orientation="vertical">

        <TextView
            android:text="@string/log_out"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin"
            android:textSize="@dimen/middleText" />

    </LinearLayout>


</LinearLayout>