<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.auth.AuthActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/bigText"
        android:layout_centerHorizontal="true"
        android:text="House renter \n(Prototype)"
        android:id="@+id/tvLabel"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_below="@+id/tvLabel"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/bigText"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvMainMsg"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMainMsg"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        app:met_singleLineEllipsis="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edEmail"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="@color/colorAccent"
        app:met_primaryColor="@color/colorAccent"
        app:met_singleLineEllipsis="true" />

    <Button
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"
        android:id="@+id/buttonAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edPassword"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/auth" />


    <Button
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"
        android:id="@+id/buttonCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAuth"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/create_an_account" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
